chore(bin): Update launch script files
- Update JustJ JRE version in Java executable paths
- Synchronize Equinox launcher version in CIS scripts
- Remove CMS options from CIS scripts
- Add --add-opens options to CIS scripts